Implementado Dynamic Search en el resto de controladores, eliminados SearchRequest concretos